# PrusaSlicer

./: CMakeLists.txt  version.inc
.github/workflows/: build.yml  build_flatpak.yml  build_flatpak_asan.yml  build_nogui.yml  build_osx.yml  build_osx_asan.yml  build_windows.yml  bundle_flatpak.yml  get_release_flatpak_manifest.yml  static_analysis.yml
bundled_deps/: CMakeLists.txt
bundled_deps/imgui/imgui/: imconfig.h  imgui_draw.cpp
bundled_deps/prusa_fdm_mixer/: CMakeLists.txt  prusa_fdm_mixer.cpp
doc/: How to build - Linux et al.md  How to build - Mac OS.md  How to build - Windows.md
resources/data/printer_gantries/: geometries.json  geometries.txt  prusa3d_coreone_gantry.stl  prusa3d_coreone_indx_gantry.stl  prusa3d_ht90_actuator.stl  prusa3d_mini_gantry.stl  prusa3d_mk3s_gantry.stl  prusa3d_mk4_gantry.stl  prusa3d_mk4s_gantry.stl
resources/localization/: PrusaSlicer.pot  list.txt
resources/localization/be/: PrusaSlicer.mo  PrusaSlicer_be.po
resources/localization/ca/: PrusaSlicer.mo  PrusaSlicer_ca.po
resources/localization/cs/: PrusaSlicer.mo  PrusaSlicer_cs.po
resources/localization/de/: PrusaSlicer.mo  PrusaSlicer_de.po
resources/localization/en/: PrusaSlicer.mo  PrusaSlicer_en.po
resources/localization/es/: PrusaSlicer.mo  PrusaSlicer_es.po
resources/localization/fi/: PrusaSlicer.mo  PrusaSlicer_fi.po
resources/localization/fr/: PrusaSlicer.mo  PrusaSlicer_fr.po
resources/localization/hu/: PrusaSlicer.mo  PrusaSlicer_hu.po
resources/localization/it/: PrusaSlicer.mo  PrusaSlicer_it.po
resources/localization/ja/: PrusaSlicer.mo  PrusaSlicer_ja.po
resources/localization/ko/: PrusaSlicer.mo  (+1 more)
resources/profiles/: BIBO.idx  BIBO.ini  HartSmartProducts.ini  PrusaResearchSLA.ini
resources/web/: connect_connection_failed.html  connect_error.html  connect_loading.html  connect_loading_reload.html  error_no_reload.html  other_connection_failed.html  other_error.html  other_loading.html  other_loading_reload.html
src/: CMakeLists.txt  PrusaSlicer.cpp  PrusaSlicer.hpp
src/CLI/: CLI.hpp  GuiParams.cpp  LoadPrintData.cpp  PrintHelp.cpp  ProcessActions.cpp  ProcessTransform.cpp  ProfilesSharingUtils.cpp  ProfilesSharingUtils.hpp  Run.cpp  Setup.cpp
src/admesh/: stlinit.cpp
src/libseqarrange/: CMakeLists.txt
src/libseqarrange/data/: arrange_data_export.txt.1  arrange_data_export.txt.10  arrange_data_export.txt.11  arrange_data_export.txt.12  arrange_data_export.txt.13  arrange_data_export.txt.14  arrange_data_export.txt.15  arrange_data_export.txt.16  arrange_data_export.txt.17  arrange_data_export.txt.2  arrange_data_export.txt.3  arrange_data_export.txt.4  arrange_data_export.txt.5  arrange_data_export.txt.7  arrange_data_export.txt.8  arrange_data_export.txt.9  arrange_data_export.txt.body.mk4  arrange_data_export.txt.composed.mk4  arrange_data_export.txt.composed_hose.mk4  arrange_data_export.txt.extruder.mk4  arrange_data_export.txt.fan.mk4  arrange_data_export.txt.gantry.mk4  arrange_data_export.txt.hose.mk4  arrange_data_export.txt.nozzle.mk4  arrange_data_import.txt  arrange_data_import.txt.1  arrange_data_import.txt.2  arrange_data_import.txt.3  arrange_data_import_000.txt  arrange_data_import_001.txt  arrange_data_import_002.txt  combo_body.txt  combo_fac.txt  combo_fan.txt  combo_gantry.txt  combo_hose.txt  combo_nozzle.txt  export.body.mk4  export.composed.mk4  export.fan.mk4  (+3 more)
src/libseqarrange/include/: seq_defs.hpp  seq_interface.hpp  seq_preprocess.hpp  seq_sequential.hpp  seq_version.hpp  seq_version.sh
src/libseqarrange/include/libseqarrange/: seq_interface.hpp
src/libseqarrange/printers/: printer_geometry.mk3s.txt  printer_geometry.mk4.compatibility.txt  printer_geometry.mk4.txt
src/libseqarrange/src/: CMakeLists.txt  seq_interface.cpp  seq_preprocess.cpp  seq_preprocess.hpp  seq_sequential.cpp  seq_sequential.hpp  seq_utilities.cpp  seq_utilities.hpp  seq_version.hpp  sequential_decimator.cpp  sequential_decimator.hpp  sequential_prusa.cpp  sequential_prusa.hpp
src/libseqarrange/test/: CMakeLists.txt  prusaparts.hpp  seq_test_arrangement.cpp  seq_test_arrangement.hpp  seq_test_interface.cpp  seq_test_interface.hpp  seq_test_polygon.cpp  seq_test_polygon.hpp  seq_test_preprocess.cpp  seq_test_preprocess.hpp  seq_test_sequential.cpp  seq_test_sequential.hpp
src/libslic3r/: AppConfig.cpp  ArrangeHelper.cpp  ArrangeHelper.hpp  BuildVolume.cpp  BuildVolume.hpp  CMakeLists.txt  ClipperUtils.cpp  ClipperUtils.hpp  ClipperZUtils.hpp  Config.cpp  Config.hpp  Emboss.cpp  ExtrusionRole.cpp  ExtrusionRole.hpp  FileReader.cpp  FileReader.hpp  Flow.cpp  GCode.cpp  GCode.hpp  Geometry.hpp  InfillAboveBridges.cpp  InfillAboveBridges.hpp  KDTreeIndirect.hpp  Layer.cpp  Layer.hpp  LayerRegion.cpp  LayerRegion.hpp  Line.cpp  Line.hpp  Measure.cpp  MeshSplitImpl.hpp  Model.cpp  Model.hpp  ModelProcessing.cpp  ModelProcessing.hpp  MultiMaterialSegmentation.cpp  MultiMaterialSegmentation.hpp  MultiPoint.hpp  MultipleBeds.cpp  MultipleBeds.hpp  (+42 more)
src/slic3r/: CMakeLists.txt
tests/: CMakeLists.txt
tests/arrange/: CMakeLists.txt  test_arrange.cpp  test_arrange_integration.cpp
tests/fff_print/: CMakeLists.txt  test_cancel_object.cpp  test_data.cpp  test_gcode.cpp  test_gcodewriter.cpp  test_infill_above_bridges.cpp  test_model.cpp  test_multi.cpp  test_perimeters.cpp  test_retraction.cpp  test_seam_geometry.cpp  test_seam_perimeters.cpp  test_seam_random.cpp  test_seam_scarf.cpp  test_seam_shells.cpp  test_thin_walls.cpp
tests/libslic3r/: CMakeLists.txt  test_3mf.cpp  test_arachne.cpp  test_arc_welder.cpp  test_astar.cpp  test_cut_surface.cpp  test_emboss.cpp  test_geometry.cpp  test_kdtreeindirect.cpp  test_line.cpp  test_mutable_priority_queue.cpp  test_placeholder_parser.cpp  test_point.cpp  test_polyline.cpp  test_quadric_edge_collapse.cpp  test_region_expansion.cpp  test_voronoi.cpp
tests/sla_print/: CMakeLists.txt  sla_archive_readwrite_tests.cpp  sla_print_tests.cpp  sla_supptgen_tests.cpp  sla_test_utils.cpp  sla_test_utils.hpp
tests/slic3rutils/: CMakeLists.txt  slic3r_arrangejob_tests.cpp  slic3r_jobs_tests.cpp
(+327 files in other folders)
